phoenix/kubernetes/myapp-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: jeanpsv/elixir-clustering-on-kubernetes:kubernetes
          imagePullPolicy: Always
          args: ["foreground"]
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/ping
              port: http
          livenessProbe:
            httpGet:
              path: /api/ping
              port: http
